<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/ivSplashScreen"
        android:src="@drawable/background_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splashimage"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="@id/tvAppName"
        app:layout_constraintBottom_toBottomOf="@id/tvAppName"
        android:background="@drawable/image_shadow"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/shadow"
        />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="45sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="30dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:layout_constraintBottom_toTopOf="@id/tvNameAuthor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/white"
        tools:targetApi="lollipop" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tvNameAuthor"
        android:background="@drawable/image_shadow"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/shadow"
        />

    <TextView
        android:id="@+id/tvNameAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/designed_by"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>