<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.desafio.dhfoodd2.view.activity.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfRegisterName"
        style="@style/DHFTextInput"
        android:layout_marginTop="33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/nameText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edRegisterName"
            style="@style/DHFEditText"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfRegisterEmail"
        style="@style/DHFTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfRegisterName"
        android:hint="@string/emailText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edRegisterEmail"
            style="@style/DHFEditText"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfRegisterPwd"
        style="@style/DHFTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfRegisterEmail"
        android:hint="@string/passwordText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edRegisterPwd"
            style="@style/DHFEditText"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfRegisterRPwd"
        style="@style/DHFTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfRegisterPwd"
        android:hint="@string/passwordText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edRegisterRPwd"
            style="@style/DHFEditText"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btRegister"
        style="@style/DHFButton"
        android:backgroundTint="@color/red"
        android:text="@string/registerText"
        android:layout_marginBottom="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>